tests/sumo/tls/wauts/errors/cross3ltl_error_unknown_to_prog/errors.sumo
Error: Can not switch tls '0' to program 'x';
 The program is not known.
Quitting (on error).
